--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://youtu.be/nkwRvWUMU3o" target="_blank">cool YouTube short about a ship</a>
+    <h1><u>A list of Cool stuff:</u></h1>
+    <ul>
+        <li><a href="https://youtu.be/nkwRvWUMU3o" target="_blank">cool YouTube short about a ship</a></li>
+    </ul>
 </body>
 </html>
