Add structure to site
TODO
substitute duplicate content
with more content

--- a/index.html
+++ b/index.html
@@ -4,12 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <h1><u>A list of Cool stuff:</u></h1>
     <ul>
-        <li><a href="https://youtu.be/nkwRvWUMU3o" target="_blank">cool YouTube short about a ship</a></li>
+        <li>
+            <div id="block_container">
+                <div class="card" id="bloc1">
+                        <a href="https://youtu.be/nkwRvWUMU3o" target="_blank">
+                            <img height="50 em" src="https://i.ytimg.com/vi/nkwRvWUMU3o/hq720_2.jpg?sqp=-oaymwEdCJUDENAFSFXyq4qpAw8IARUAAIhCcAHAAQbQAQE=&rs=AOn4CLCGvDzSycjpQBmubLBQPAZ297P1Ng">
+                            cool YouTube short about a ship
+                         </a>
+                </div>
+                <div class="card" id="bloc2">
+                        <a href="https://youtu.be/nkwRvWUMU3o" target="_blank">
+                            <img height="50 em" src="https://i.ytimg.com/vi/nkwRvWUMU3o/hq720_2.jpg?sqp=-oaymwEdCJUDENAFSFXyq4qpAw8IARUAAIhCcAHAAQbQAQE=&rs=AOn4CLCGvDzSycjpQBmubLBQPAZ297P1Ng">
+                            cool YouTube short about a ship
+                         </a>
+                </div>
+                <div class="card" id="bloc3">
+                        <a href="https://youtu.be/nkwRvWUMU3o" target="_blank">
+                            <img height="50 em" src="https://i.ytimg.com/vi/nkwRvWUMU3o/hq720_2.jpg?sqp=-oaymwEdCJUDENAFSFXyq4qpAw8IARUAAIhCcAHAAQbQAQE=&rs=AOn4CLCGvDzSycjpQBmubLBQPAZ297P1Ng">
+                            cool YouTube short about a ship
+                         </a>
+                </div>
+                <div class="card" id="bloc4">
+                        <a href="https://youtu.be/nkwRvWUMU3o" target="_blank">
+                            <img height="50 em" src="https://i.ytimg.com/vi/nkwRvWUMU3o/hq720_2.jpg?sqp=-oaymwEdCJUDENAFSFXyq4qpAw8IARUAAIhCcAHAAQbQAQE=&rs=AOn4CLCGvDzSycjpQBmubLBQPAZ297P1Ng">
+                            cool YouTube short about a ship
+                         </a>
+                </div>
+            </div>
+        </li>
     </ul>
 </body>
 </html>
