add link and image

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                          </a>
                 </div>
                 <div class="card" id="bloc2">
-                        <a href="https://youtu.be/nkwRvWUMU3o" target="_blank">
-                            <img height="50 em" src="https://i.ytimg.com/vi/nkwRvWUMU3o/hq720_2.jpg?sqp=-oaymwEdCJUDENAFSFXyq4qpAw8IARUAAIhCcAHAAQbQAQE=&rs=AOn4CLCGvDzSycjpQBmubLBQPAZ297P1Ng">
-                            cool YouTube short about a ship
+                        <a href="https://www.youtube.com/watch?v=ZaK-lbhhx_M&t=38s" target="_blank">
+                            <img height="50 em" src="https://i.ytimg.com/an_webp/ZaK-lbhhx_M/mqdefault_6s.webp?du=3000&sqp=CMKpy5wG&rs=AOn4CLAUD64EzXVOCOSuluJU4o_AYbe27Q">
+                            cool location music and history
                          </a>
                 </div>
                 <div class="card" id="bloc3">
