--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                          </a>
                 </div>
                 <div class="card" id="bloc3">
-                        <a href="https://youtu.be/nkwRvWUMU3o" target="_blank">
-                            <img height="50 em" src="https://i.ytimg.com/vi/nkwRvWUMU3o/hq720_2.jpg?sqp=-oaymwEdCJUDENAFSFXyq4qpAw8IARUAAIhCcAHAAQbQAQE=&rs=AOn4CLCGvDzSycjpQBmubLBQPAZ297P1Ng">
-                            cool YouTube short about a ship
+                        <a href="https://youtu.be/6ds9y3lJGig" target="_blank">
+                            <img height="50 em" src="https://i.ytimg.com/an_webp/6ds9y3lJGig/mqdefault_6s.webp?du=3000&sqp=CJiDy5wG&rs=AOn4CLBe8d_qbAnBHKfJCeTp_jfgzuIF0Q">
+                            The Burning Bush
                          </a>
                 </div>
                 <div class="card" id="bloc4">
-                        <a href="https://youtu.be/nkwRvWUMU3o" target="_blank">
-                            <img height="50 em" src="https://i.ytimg.com/vi/nkwRvWUMU3o/hq720_2.jpg?sqp=-oaymwEdCJUDENAFSFXyq4qpAw8IARUAAIhCcAHAAQbQAQE=&rs=AOn4CLCGvDzSycjpQBmubLBQPAZ297P1Ng">
-                            cool YouTube short about a ship
+                        <a href="https://youtu.be/oG0a9WFkgzU?t=39" target="_blank">
+                            <img height="50 em" src="https://i.ytimg.com/an_webp/oG0a9WFkgzU/mqdefault_6s.webp?du=3000&sqp=CP-My5wG&rs=AOn4CLAWdehd4A-jmRmbN-0owrFeceYSfg">
+                            look at your life
                          </a>
                 </div>
             </div>
