Duplicate first line to Add second line of links

--- a/index.html
+++ b/index.html
@@ -38,6 +38,35 @@
                 </div>
             </div>
         </li>
+        <li>
+            <div id="block_container">
+                <div class="card" id="bloc5">
+                        <a href="https://youtu.be/nkwRvWUMU3o" target="_blank">
+                            <img height="50 em" src="https://i.ytimg.com/vi/nkwRvWUMU3o/hq720_2.jpg?sqp=-oaymwEdCJUDENAFSFXyq4qpAw8IARUAAIhCcAHAAQbQAQE=&rs=AOn4CLCGvDzSycjpQBmubLBQPAZ297P1Ng">
+                            cool YouTube short about a ship
+                         </a>
+                </div>
+                <div class="card" id="bloc6">
+                        <a href="https://www.youtube.com/watch?v=ZaK-lbhhx_M&t=38s" target="_blank">
+                            <img height="50 em" src="https://i.ytimg.com/an_webp/ZaK-lbhhx_M/mqdefault_6s.webp?du=3000&sqp=CMKpy5wG&rs=AOn4CLAUD64EzXVOCOSuluJU4o_AYbe27Q">
+                            cool location music and history
+                         </a>
+                </div>
+                <div class="card" id="bloc7">
+                        <a href="https://youtu.be/6ds9y3lJGig" target="_blank">
+                            <img height="50 em" src="https://i.ytimg.com/an_webp/6ds9y3lJGig/mqdefault_6s.webp?du=3000&sqp=CJiDy5wG&rs=AOn4CLBe8d_qbAnBHKfJCeTp_jfgzuIF0Q">
+                            The Burning Bush
+                         </a>
+                </div>
+                <div class="card" id="bloc8">
+                        <a href="https://youtu.be/oG0a9WFkgzU?t=39" target="_blank">
+                            <img height="50 em" src="https://i.ytimg.com/an_webp/oG0a9WFkgzU/mqdefault_6s.webp?du=3000&sqp=CP-My5wG&rs=AOn4CLAWdehd4A-jmRmbN-0owrFeceYSfg">
+                            look at your life
+                         </a>
+                </div>
+            </div>
+        </li>
+
     </ul>
 </body>
 </html>
