Add content to second line

--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
     <ul>
         <li>
             <div id="block_container">
-                <div class="card" id="bloc1">
+                <div class="card short" id="bloc1">
                         <a href="https://youtu.be/nkwRvWUMU3o" target="_blank">
-                            <img height="50 em" src="https://i.ytimg.com/vi/nkwRvWUMU3o/hq720_2.jpg?sqp=-oaymwEdCJUDENAFSFXyq4qpAw8IARUAAIhCcAHAAQbQAQE=&rs=AOn4CLCGvDzSycjpQBmubLBQPAZ297P1Ng">
+                            <img src="https://i.ytimg.com/vi/nkwRvWUMU3o/hq720_2.jpg?sqp=-oaymwEdCJUDENAFSFXyq4qpAw8IARUAAIhCcAHAAQbQAQE=&rs=AOn4CLCGvDzSycjpQBmubLBQPAZ297P1Ng">
                             cool YouTube short about a ship
                          </a>
                 </div>
-                <div class="card" id="bloc2">
+                <div class="card long" id="bloc2">
                         <a href="https://www.youtube.com/watch?v=ZaK-lbhhx_M&t=38s" target="_blank">
-                            <img height="50 em" src="https://i.ytimg.com/an_webp/ZaK-lbhhx_M/mqdefault_6s.webp?du=3000&sqp=CMKpy5wG&rs=AOn4CLAUD64EzXVOCOSuluJU4o_AYbe27Q">
+                            <img src="https://i.ytimg.com/an_webp/ZaK-lbhhx_M/mqdefault_6s.webp?du=3000&sqp=CMKpy5wG&rs=AOn4CLAUD64EzXVOCOSuluJU4o_AYbe27Q">
                             cool location music and history
                          </a>
                 </div>
-                <div class="card" id="bloc3">
+                <div class="card long" id="bloc3">
                         <a href="https://youtu.be/6ds9y3lJGig" target="_blank">
-                            <img height="50 em" src="https://i.ytimg.com/an_webp/6ds9y3lJGig/mqdefault_6s.webp?du=3000&sqp=CJiDy5wG&rs=AOn4CLBe8d_qbAnBHKfJCeTp_jfgzuIF0Q">
+                            <img src="https://i.ytimg.com/an_webp/6ds9y3lJGig/mqdefault_6s.webp?du=3000&sqp=CJiDy5wG&rs=AOn4CLBe8d_qbAnBHKfJCeTp_jfgzuIF0Q">
                             The Burning Bush
                          </a>
                 </div>
-                <div class="card" id="bloc4">
+                <div class="card long" id="bloc4">
                         <a href="https://youtu.be/oG0a9WFkgzU?t=39" target="_blank">
-                            <img height="50 em" src="https://i.ytimg.com/an_webp/oG0a9WFkgzU/mqdefault_6s.webp?du=3000&sqp=CP-My5wG&rs=AOn4CLAWdehd4A-jmRmbN-0owrFeceYSfg">
+                            <img src="https://i.ytimg.com/an_webp/oG0a9WFkgzU/mqdefault_6s.webp?du=3000&sqp=CP-My5wG&rs=AOn4CLAWdehd4A-jmRmbN-0owrFeceYSfg">
                             look at your life
                          </a>
                 </div>
@@ -40,28 +40,28 @@
         </li>
         <li>
             <div id="block_container">
-                <div class="card" id="bloc5">
-                        <a href="https://youtu.be/nkwRvWUMU3o" target="_blank">
-                            <img height="50 em" src="https://i.ytimg.com/vi/nkwRvWUMU3o/hq720_2.jpg?sqp=-oaymwEdCJUDENAFSFXyq4qpAw8IARUAAIhCcAHAAQbQAQE=&rs=AOn4CLCGvDzSycjpQBmubLBQPAZ297P1Ng">
-                            cool YouTube short about a ship
+                <div class="card long" id="bloc5">
+                        <a href="https://youtu.be/xFIXMM1KWyc?t=13" target="_blank">
+                            <img src="https://i.ytimg.com/an_webp/xFIXMM1KWyc/mqdefault_6s.webp?du=3000&sqp=CLrFy5wG&rs=AOn4CLDS807WQ4dv3VGF8VWSdcfU6a-DJQ">
+                            history video
                          </a>
                 </div>
-                <div class="card" id="bloc6">
-                        <a href="https://www.youtube.com/watch?v=ZaK-lbhhx_M&t=38s" target="_blank">
-                            <img height="50 em" src="https://i.ytimg.com/an_webp/ZaK-lbhhx_M/mqdefault_6s.webp?du=3000&sqp=CMKpy5wG&rs=AOn4CLAUD64EzXVOCOSuluJU4o_AYbe27Q">
-                            cool location music and history
+                <div class="card long" id="bloc6">
+                        <a href="https://docs.google.com/presentation/d/e/2PACX-1vRnO5IOzq4nVFvPiYdF9k2ALV99xDPm4yxZPNk4cwvKstE_r8hbWoHN5irI3UZMY6TuqWS-OGOd70qD/pub?start=false&loop=false&delayms=3000" target="_blank">
+                            <img src="https://lh3.google.com/u/0/d/1UTUBQT3DSz5PK4SxqKfQ4-PT-8LB8fHqcEn0FrhB120=w416-h234-iv8">
+                            history slides
                          </a>
                 </div>
-                <div class="card" id="bloc7">
-                        <a href="https://youtu.be/6ds9y3lJGig" target="_blank">
-                            <img height="50 em" src="https://i.ytimg.com/an_webp/6ds9y3lJGig/mqdefault_6s.webp?du=3000&sqp=CJiDy5wG&rs=AOn4CLBe8d_qbAnBHKfJCeTp_jfgzuIF0Q">
-                            The Burning Bush
+                <div class="card long" id="bloc7">
+                        <a href="https://youtu.be/AiuC_CaObbI?t=7" target="_blank">
+                            <img src="https://i.ytimg.com/vi/AiuC_CaObbI/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBvc0yXpbkQWAf0iaEopSoRhLcmiA">
+                            Does this song sound familiar?
                          </a>
                 </div>
-                <div class="card" id="bloc8">
-                        <a href="https://youtu.be/oG0a9WFkgzU?t=39" target="_blank">
-                            <img height="50 em" src="https://i.ytimg.com/an_webp/oG0a9WFkgzU/mqdefault_6s.webp?du=3000&sqp=CP-My5wG&rs=AOn4CLAWdehd4A-jmRmbN-0owrFeceYSfg">
-                            look at your life
+                <div class="card long" id="bloc8">
+                        <a href="https://youtu.be/MiXgOQ9_-RI?t=1" target="_blank">
+                            <img src="https://i.ytimg.com/vi/MiXgOQ9_-RI/hqdefault.jpg?sqp=-oaymwEcCOADEI4CSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLAFQpJIGx4Yhk_qMoEOFbBzA876OA">
+                            what about this song?
                          </a>
                 </div>
             </div>
