--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                          </a>
                 </div>
                 <div class="card long" id="bloc2">
-                        <a href="https://www.youtube.com/watch?v=ZaK-lbhhx_M&t=38s" target="_blank">
+                        <a href="https://youtu.be/ZaK-lbhhx_M" target="_blank">
                             <img src="https://i.ytimg.com/an_webp/ZaK-lbhhx_M/mqdefault_6s.webp?du=3000&sqp=CMKpy5wG&rs=AOn4CLAUD64EzXVOCOSuluJU4o_AYbe27Q">
                             cool location music and history
                          </a>
