--- a/index.html
+++ b/index.html
@@ -66,6 +66,34 @@
                 </div>
             </div>
         </li>
+        <li>
+            <div id="block_container">
+                <div class="card long" id="bloc9">
+                        <a href="https://youtu.be/ZO-3dj33k-I" target="_blank">
+                            <img src="https://i.ytimg.com/vi/ZO-3dj33k-I/hqdefault.jpg?sqp=-oaymwEcCOADEI4CSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCo240VdfQLMZpdb8gYGG1E2WaeKQ">
+                            Love has a Name
+                         </a>
+                </div>
+                <div class="card long" id="bloc10">
+                        <a href="https://youtu.be/I6lUzYuPPmY?t=2" target="_blank">
+                            <img src="https://i.ytimg.com/vi/I6lUzYuPPmY/hqdefault.jpg?sqp=-oaymwEcCOADEI4CSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLD31LZRCUauI1d_4NDPhkJNUUR9bg">
+                            Through the Halls
+                         </a>
+                </div>
+                <div class="card long" id="bloc11">
+                        <a href="https://youtu.be/8nmIqFPFVP8" target="_blank">
+                            <img src="https://i.ytimg.com/vi/8nmIqFPFVP8/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBjowPPQKqYJ_jheJZWM9Ef4IZ63A">
+                            The Second Greatest Story
+                         </a>
+                </div>
+                <div class="card long" id="bloc12">
+                        <a href="https://youtu.be/gxOTpuQe6M4" target="_blank">
+                            <img src="https://i.ytimg.com/an_webp/gxOTpuQe6M4/mqdefault_6s.webp?du=3000&sqp=CODFy5wG&rs=AOn4CLBeVZqFARep2oGTOP2p9sJD9DElGA">
+                            World
+                         </a>
+                </div>
+            </div>
+        </li>
 
     </ul>
 </body>
