--- a/index.html
+++ b/index.html
@@ -94,6 +94,34 @@
                 </div>
             </div>
         </li>
+        <li>
+            <div id="block_container">
+                <div class="card long" id="bloc13">
+                        <a href="https://youtu.be/vsINANZ6Riw" target="_blank">
+                            <img src="https://i.ytimg.com/an_webp/vsINANZ6Riw/mqdefault_6s.webp?du=3000&sqp=CIjxy5wG&rs=AOn4CLDmZ2vvIUgHNFFmc2WqN_oMAWh9wQ">
+                            Baba Yetu
+                         </a>
+                </div>
+                <div class="card long" id="bloc14">
+                        <a href="https://www.youtube.com/watch?v=WyxXGdG3-Io" target="_blank">
+                            <img src="https://i.ytimg.com/an_webp/WyxXGdG3-Io/mqdefault_6s.webp?du=3000&sqp=CNDwy5wG&rs=AOn4CLDlqbRNAmUHouVZwOXAbI3d12Cbiw">
+                            Nearer
+                         </a>
+                </div>
+                <div class="card long" id="bloc15">
+                        <a href="https://youtu.be/sEZDuMGp3WY" target="_blank">
+                            <img src="https://i.ytimg.com/vi/sEZDuMGp3WY/hqdefault.jpg?sqp=-oaymwE2CNACELwBSFXyq4qpAygIARUAAIhCGAFwAcABBvABAfgB1AaAAuADigIMCAAQARhMIFsoZTAP&rs=AOn4CLBzesJWYA4C4E4VJdenpfmU0WHPeg">
+                            Awesome
+                         </a>
+                </div>
+                <div class="card long" id="bloc16">
+                        <a href="https://youtu.be/yxq_6prPABs?t=41" target="_blank">
+                            <img src=https://i.ytimg.com/vi/yxq_6prPABs/hqdefault.jpg?sqp=-oaymwE2CNACELwBSFXyq4qpAygIARUAAIhCGAFwAcABBvABAfgB1AaAAuADigIMCAAQARhBIFAoZTAP&rs=AOn4CLCno0hWbzC7CBbhZJyZeVj5roWKgw">
+                            Open
+                         </a>
+                </div>
+            </div>
+        </li>
 
     </ul>
 </body>
