Fix row 1 link 2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="card long" id="bloc2">
                         <a href="https://youtu.be/ZaK-lbhhx_M" target="_blank">
-                            <img src="https://i.ytimg.com/an_webp/ZaK-lbhhx_M/mqdefault_6s.webp?du=3000&sqp=CMKpy5wG&rs=AOn4CLAUD64EzXVOCOSuluJU4o_AYbe27Q">
+                            <img src="https://i.ytimg.com/an_webp/ZaK-lbhhx_M/mqdefault_6s.webp?du=3000&sqp=CLPV25wG&rs=AOn4CLCkiM7lJR5_wImnmeL1kPJAeRN_VA">
                             cool location music and history
                          </a>
                 </div>
