Fix other image links

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 </div>
                 <div class="card long" id="bloc3">
                         <a href="https://youtu.be/6ds9y3lJGig" target="_blank">
-                            <img src="https://i.ytimg.com/an_webp/6ds9y3lJGig/mqdefault_6s.webp?du=3000&sqp=CJiDy5wG&rs=AOn4CLBe8d_qbAnBHKfJCeTp_jfgzuIF0Q">
+                            <img src="https://i.ytimg.com/an_webp/6ds9y3lJGig/mqdefault_6s.webp?du=3000&sqp=CLiu25wG&rs=AOn4CLC_QbDjW-BV3L4RoBQ2el3QC7Z_xQ">
                             The Burning Bush
                          </a>
                 </div>
                 <div class="card long" id="bloc4">
                         <a href="https://youtu.be/oG0a9WFkgzU?t=39" target="_blank">
-                            <img src="https://i.ytimg.com/an_webp/oG0a9WFkgzU/mqdefault_6s.webp?du=3000&sqp=CP-My5wG&rs=AOn4CLAWdehd4A-jmRmbN-0owrFeceYSfg">
+                            <img src="https://i.ytimg.com/an_webp/oG0a9WFkgzU/mqdefault_6s.webp?du=3000&sqp=CICk25wG&rs=AOn4CLCVAgDAByunFmalSrscRgf568DxdQ">
                             look at your life
                          </a>
                 </div>
@@ -42,7 +42,7 @@
             <div id="block_container">
                 <div class="card long" id="bloc5">
                         <a href="https://youtu.be/xFIXMM1KWyc?t=12" target="_blank">
-                            <img src="https://i.ytimg.com/an_webp/xFIXMM1KWyc/mqdefault_6s.webp?du=3000&sqp=CLrFy5wG&rs=AOn4CLDS807WQ4dv3VGF8VWSdcfU6a-DJQ">
+                            <img src="https://i.ytimg.com/an_webp/xFIXMM1KWyc/mqdefault_6s.webp?du=3000&sqp=CN3U25wG&rs=AOn4CLB1eK2j24PVVbXLBzrGsOxDR23P5w">
                             history video
                          </a>
                 </div>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="card long" id="bloc12">
                         <a href="https://youtu.be/gxOTpuQe6M4" target="_blank">
-                            <img src="https://i.ytimg.com/an_webp/gxOTpuQe6M4/mqdefault_6s.webp?du=3000&sqp=CODFy5wG&rs=AOn4CLBeVZqFARep2oGTOP2p9sJD9DElGA">
+                            <img src="https://i.ytimg.com/an_webp/gxOTpuQe6M4/mqdefault_6s.webp?du=3000&sqp=CNq_25wG&rs=AOn4CLDhGjkD-Y1qBa-ZlymorhE26pOlBQ">
                             World
                          </a>
                 </div>
@@ -98,13 +98,13 @@
             <div id="block_container">
                 <div class="card long" id="bloc13">
                         <a href="https://youtu.be/vsINANZ6Riw" target="_blank">
-                            <img src="https://i.ytimg.com/an_webp/vsINANZ6Riw/mqdefault_6s.webp?du=3000&sqp=CIjxy5wG&rs=AOn4CLDmZ2vvIUgHNFFmc2WqN_oMAWh9wQ">
+                            <img src="https://i.ytimg.com/an_webp/vsINANZ6Riw/mqdefault_6s.webp?du=3000&sqp=CPTN25wG&rs=AOn4CLCPN0VzbXnhhqIJfgZP31TJ-xWSFg">
                             Baba Yetu
                          </a>
                 </div>
                 <div class="card long" id="bloc14">
                         <a href="https://www.youtube.com/watch?v=WyxXGdG3-Io" target="_blank">
-                            <img src="https://i.ytimg.com/an_webp/WyxXGdG3-Io/mqdefault_6s.webp?du=3000&sqp=CNDwy5wG&rs=AOn4CLDlqbRNAmUHouVZwOXAbI3d12Cbiw">
+                            <img src="https://i.ytimg.com/an_webp/WyxXGdG3-Io/mqdefault_6s.webp?du=3000&sqp=CJ7L25wG&rs=AOn4CLA5yH6wz2eEUiNA-owCyQmChxzz2A">
                             Nearer
                          </a>
                 </div>
